# potenv

./: .editorconfig  .env  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: codecov.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: publish.yml  test.yml
benches/resources/: big.env
src/: lib.rs  test_utils.rs
src/env/: mod.rs  provider.rs  tests.rs
src/evaluator/: mod.rs  tests.rs
src/parser/: ast.rs  mod.rs  tests.rs
src/tokenizer/: err.rs  mod.rs  pos.rs  tests.rs  token.rs
tests/: evaluate.rs  load.rs
tests/resources/: evaluate.json
tests/resources/dotenv/: 000-parse-error.env  001.env  002b.env
tests/utils/: mod.rs
