[package]
name = "potenv"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the POSIX-compliant dotenv file format specification."
repository = "https://github.com/ju1ius/potenv"
license-file = "LICENSE"
include = [
  "/src",
  "!**/tests.rs",
  "!/src/test_utils.rs",
]
keywords = ["dotenv", "posix", "config", "env", "environment"]
categories = ["config", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"

[dev-dependencies]
rstest = "0.18.1"
serde = {version = "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
walkdir = "2.3.3"
